# unidbg

./: .editorconfig  .gitattributes  .gitignore  Dockerfile  README.md  mvnw  pom.xml  pull.sh  settings.xml  test.cmd  test.sh  test_linux64.sh  test_osx64.sh  test_win32.cmd  test_win64.cmd
.github/workflows/: jitpack.yml
assets/: mach_o.ksy
backend/dynarmic/: README.md  pom.xml
backend/dynarmic/src/main/native/dynarmic/: CMakeLists.txt  Dockerfile  Dockerfile.windows  arm_dynarmic_cp15.cpp  arm_dynarmic_cp15.h  build.sh  com_github_unidbg_arm_backend_dynarmic_Dynarmic.h  docker_build.sh  dynarmic.cpp  dynarmic.h  linux_build.sh  mman.c  mman.h  osx_build.sh  osx_build_arm64.sh  osx_build_master.sh  windows_build.sh
backend/hypervisor/: README.md  pom.xml
backend/hypervisor/assets/: ldid
backend/hypervisor/src/main/native/hypervisor/: CMakeLists.txt  build.sh  com_github_unidbg_arm_backend_HypervisorFactory.h  com_github_unidbg_arm_backend_hypervisor_Hypervisor.h  hypervisor.cpp  hypervisor.h  hypervisor.mm  osx_build.sh  vcpu.h
backend/kvm/: README.md  pom.xml
backend/unicorn2/: README.md  pom.xml
backend/unicorn2/src/main/native/: CMakeLists.txt  Dockerfile  Dockerfile.windows  build.sh  com_github_unidbg_arm_backend_unicorn_Unicorn.h  com_github_unidbg_arm_backend_unicorn_Unicorn_NewHook.h  com_github_unidbg_arm_backend_unicorn_Unicorn_Tuple.h  com_github_unidbg_arm_backend_unicorn_Unicorn_UnHook.h  docker_build.sh  linux_build.sh  osx_build.sh  osx_build_arm64.sh  sample_arm.c  sample_arm64.c  unicorn.c  unicorn.h  windows_build.sh
prebuilt/linux64/: libcapstone.so.4
prebuilt/osx64/: libcapstone.dylib  libkeystone.0.dylib  libkeystone.dylib  libunicorn_java.dylib
prebuilt/osx_64/: libcapstone.4.dylib
src/main/native/ios/: bootstrap.c  bootstrap.m  build.sh  class-dump.m  test.h
src/main/resources/ios/: bootstrap  bootstrap_objc
src/test/native/android/: Application.mk  build.sh  test.c
src/test/resources/: log4j.properties
src/test/resources/example_binaries/: DexTest.java  app_process  busybox  dalvikvm  devices.txt  libsubstrate.dylib  ssh  xpc
src/test/resources/files/: address  cmdline  maps
unidbg-android/: pom.xml  pull.sh
unidbg-android/src/test/proto/: test.proto
unidbg-android/src/test/resources/: log4j.properties
unidbg-api/: pom.xml
unidbg-api/src/main/resources/: cc.c
unidbg-api/src/test/resources/: log4j.properties
unidbg-dynarmic/: README.md  pom.xml
unidbg-hypervisor/: README.md  pom.xml
unidbg-ios/: kaitai_struct_compile_java.sh  pom.xml
unidbg-ios/assets/: gpb.js  mach_o.ksy
(+2433 files in other folders)
